--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-.svn
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
+*.o
+*.a
+
+!Makefile
+!LICENSE
+!notes
